Sun Sep 30 22:30:05 2007  Arnold D. Robbins  <arnold@skeeve.com>

	* gawk.texi (Conversions): Add table describing locale decimal
	point versus period.

Sat Sep  8 23:53:46 2007  Arnold D. Robbins  <arnold@skeeve.com>

	* gawk.texi: A number of minor fixes based on suggestions
	from Jack Kelley <Jack.Kelley@epa.qld.gov.au>.

Sat Aug 11 22:46:14 2007  Arnold D. Robbins  <arnold@skeeve.com>

	* gawk.texi (Copying): Move to GPL 3.

Wed May 30 17:11:19 2007  Arnold D. Robbins  <arnold@skeeve.com>

	* Makefile.am (CLEANFILES): Added, so that even "make distclean"
	will do the right thing.
	(clean): Removed, let automake to do it.

Tue May 29 22:49:16 2007  Arnold D. Robbins  <arnold@skeeve.com>

	* gawk.texi: Document --use-lc-numeric. Document that some
	VMS systems come with an old version of gawk.

Mon May 28 08:21:51 2007  Arnold D. Robbins  <arnold@skeeve.com>

	* gawk.1, awkcard.in: Document --use-lc-numeric.

Tue May 15 13:27:38 2007  Arnold D. Robbins  <arnold@skeeve.com>

	* gawk.texi, gawk.1: Documented --disable-directories-fatal
	configure option.

Wed May  9 21:50:44 2007  Arnold D. Robbins  <arnold@skeeve.com>

	* gawk.1: Reviewed and updated, minor typos fixed.
	* awkcard.in: Added mention of %F.

Wed May  2 19:55:02 2007  Arnold D. Robbins  <arnold@skeeve.com>

	* gawk.texi: Cleaned up discussion of string concatenation
	where needed, including a note about the mixed treatment
	of `"echo " "date" | getline'.  Sigh.

Sun Apr 29 13:33:27 2007  Arnold D. Robbins  <arnold@skeeve.com>

	* gawk.texi (Time Functions): Update description of strftime
	for third utc-flag argument. Other minor fixes.
	* gawk.1, awkcard.in: Same.

Tue Apr  3 22:47:40 2007  Arnold D. Robbins  <arnold@skeeve.com>

	* gawk.texi (New Ports): Update list of files for all of
	regex that should not be messed with lightly.

Wed Mar 21 09:02:53 2007  Arnold D. Robbins  <arnold@skeeve.com>

	* gawk.texi: Removed last vestiges of arnold@gnu.org
	email address.
